@@ -1,3 +1,8 @@
+TAG: gxdhtload-6-0-23-6
+DATE: 04/11/2024
+STAFF: sc
+CHANGES: wts2-1440 - added some of the report qc to DEBUG mode only
+
 TAG: gxdhtload-6-0-23-5
 DATE: 04/10/2024
 STAFF: sc
